<resources>
    <string name="app_name">Kuis 1 PAM_11321051</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="gmail">GMAIL</string>
    <string name="welcome_user_nyou_logged_i_in">Welcome, User\nYou logged I in</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
</resources>